# SPCS

./: .gitignore  README.md
debug/metropolis/: CMakeLists.txt  converter.cpp
debug/sgd/: CMakeLists.txt  README.md  main.cpp  stochastic_gradient_descent.ipynb
debug/walk/: CMakeLists.txt
debug/walk/evaluations/: dependence_on_n  mueller-brown  random_walk
ex01/: CMakeLists.txt  README.md
ex01/build1/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  exercise01
ex01/evaluations/: dependence_on_n  mmc_energies  random_walk
ex01/include/: coordinates.h  walk.h
exercise01/: CMakeLists.txt  README.md  exercise01.cpp
exercise01/evaluations/: dependence_on_n  mmc_energies  plot.py  random_walk
exercise01/include/: monte_carlo.cpp  monte_carlo.h  pretty.cpp  pretty.h  walk.cpp  walk.h
exercise01/temp/: dependence_on_n
fftExamples/: fftw_example  main.cpp
helper_scripts/: reader.py
mdatom/: CMakeLists.txt  README.md  main.cpp
mdatom/lib/: AveragedRadialDistribution.cpp  AveragedRadialDistribution.h  BinaryIO.cpp  BinaryIO.h  CenterOfMassCalculator.cpp  CenterOfMassCalculator.h  CoordinatesAndVelocitiesInitializer.cpp  CoordinatesAndVelocitiesInitializer.h  InstantaneousRadialDistribution.cpp  InstantaneousRadialDistribution.h  InteractionCalculator.cpp  InteractionCalculator.h  MDParameters.cpp  MDParameters.h  MDRun.cpp  MDRun.h  MDRunOutput.cpp  MDRunOutput.h  MDSimulation.cpp  MDSimulation.h  ParameterIO.h  ParameterValidityChecker.cpp  RadialDistribution.h  (+9 more)
scratch/: coordinates.h  dependence_on_n  dependence_on_n__
walk/: exercise1.cpp
(+54 files in other folders)
